# ChangeLog for net-libs/rb_libtorrent
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/rb_libtorrent/ChangeLog,v 1.173 2014/05/10 10:16:46 hwoarang Exp $

*rb_libtorrent-0.16.16 (10 May 2014)

  10 May 2014; Markos Chandras <hwoarang@gentoo.org>
  +rb_libtorrent-0.16.16.ebuild:
  Version bump

  15 Mar 2014; Markos Chandras <hwoarang@gentoo.org>
  -rb_libtorrent-0.16.12.ebuild, -rb_libtorrent-0.16.13.ebuild,
  -rb_libtorrent-0.16.14.ebuild, rb_libtorrent-0.16.10.ebuild,
  rb_libtorrent-0.16.15.ebuild:
  Make sure the correct boot library path is used. Bug #503746. Patch by Georgi
  Georgiev

*rb_libtorrent-0.16.15 (03 Mar 2014)

  03 Mar 2014; Markos Chandras <hwoarang@gentoo.org>
  +rb_libtorrent-0.16.15.ebuild:
  Version bump

*rb_libtorrent-0.16.14 (04 Feb 2014)

  04 Feb 2014; Markos Chandras <hwoarang@gentoo.org>
  +rb_libtorrent-0.16.14.ebuild:
  Version bump thanks to Holger Hoffstätte. Bug #499780

*rb_libtorrent-0.16.13 (22 Dec 2013)

  22 Dec 2013; Markos Chandras <hwoarang@gentoo.org>
  +rb_libtorrent-0.16.13.ebuild, -rb_libtorrent-0.16.11.ebuild,
  -rb_libtorrent-0.16.5.ebuild, -rb_libtorrent-0.16.8.ebuild,
  -rb_libtorrent-0.16.9.ebuild:
  Version bump. Drop old ebuilds

*rb_libtorrent-0.16.12 (26 Oct 2013)

  26 Oct 2013; Markos Chandras <hwoarang@gentoo.org
  +rb_libtorrent-0.16.12.ebuild:
  Version bump

*rb_libtorrent-0.16.11 (08 Sep 2013)

  08 Sep 2013; Markos Chandras <hwoarang@gentoo.org>
  +rb_libtorrent-0.16.11.ebuild:
  Version bump

  07 Sep 2013; Agostino Sarubbo <ago@gentoo.org> rb_libtorrent-0.16.10.ebuild:
  Stable for sparc, wrt bug #481440

  05 Sep 2013; Agostino Sarubbo <ago@gentoo.org> rb_libtorrent-0.16.10.ebuild:
  Stable for ppc64, wrt bug #481440

  28 Aug 2013; Agostino Sarubbo <ago@gentoo.org> rb_libtorrent-0.16.10.ebuild:
  Stable for x86, wrt bug #481440

  26 Aug 2013; Agostino Sarubbo <ago@gentoo.org> rb_libtorrent-0.16.10.ebuild: