@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>net-p2p</herd>
 	<maintainer>
-		<email>hwoarang@gentoo.org</email>
-		<name>Markos Chandras</name>
+		<email>poncho@spahan.ch</email>
+		<name>Poncho</name>
 	</maintainer>
 	<upstream>
 		<remote-id type="google-code">libtorrent</remote-id>
